@@ -16,4 +16,5 @@
 <entry key="trayrss.time.vacationstart"/>
 <entry key="trayrss.time.su">false</entry>
 <entry key="trayrss.time.th">true</entry>
+<entry key="trayrss.timerestriction">true</entry>
 </properties>
